--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ body {
     width: 100vw;
     justify-content: center;
 
+    /* Fonts */
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
     /* Colors */
     --sidebar-color: #568ce3;
     --header-color: #fafafa;
@@ -30,6 +33,10 @@ body {
     grid-column: 1 / 2;
 
     background-color: var(--sidebar-color);
+    padding: 10px;
+
+    display: grid;
+    grid-template-rows: 1fr 3fr 2fr;
 }
 
 .header {
@@ -44,4 +51,20 @@ body {
     grid-column: 2 / 3;
 
     background-color: var(--content-color);
+}
+
+.logo,
+.side-button {
+    color: var(--header-color);
+}
+
+.logo {
+    font-size: 32px;
+    font-weight: 400;
+}
+
+.sidebar > ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
