--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    border: 1px solid black;
 }
 
 body {
@@ -33,10 +34,11 @@ body {
     grid-column: 1 / 2;
 
     background-color: var(--sidebar-color);
-    padding: 10px;
+    padding: 20px;
 
     display: grid;
-    grid-template-rows: 1fr 3fr 2fr;
+    grid-template-rows: 80px 300px 300px;
+    gap: 30px;
 }
 
 .header {
@@ -44,6 +46,9 @@ body {
     grid-column: 2 /3;
 
     background-color: var(--header-color);
+
+    display: grid;
+    grid-template-rows: 1fr 2fr;
 }
 
 .content {
@@ -60,11 +65,49 @@ body {
 
 .logo {
     font-size: 32px;
-    font-weight: 400;
+    font-weight: 600;
+    align-self: flex-start;
 }
 
 .sidebar > ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
+    display: grid;
+    grid-template-rows: repeat(auto-fill, 50px);
+}
+
+li {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.top-header,
+.bottom-header {
+    display: grid;
+    grid-template-columns: 6fr 4fr;
+}
+
+.top-header
+.search-bar {
+    display: grid;
+    grid-template-columns: 2fr 8fr;
+}
+
+.top-header
+.current-user {
+    display: grid;
+    grid-template-columns: 4fr 2fr 4fr;
+}
+
+.bottom-header
+.user-header {
+    display: grid;
+    grid-template-columns: 3fr 7fr;
+}
+
+.bottom-header
+.header-buttons {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
