--- a/style.css
+++ b/style.css
@@ -163,3 +163,19 @@ li {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(auto-fill, 1fr);
 }
+
+.search-button button {
+    background-color: var(--header-color);
+    border: none;
+}
+
+.search-button button:hover {
+    background-color: var(--header-color);
+}
+
+.search-input input {
+    background-color: #caccce;
+    border-radius: 12px;
+    border: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
