--- a/style.css
+++ b/style.css
@@ -29,6 +29,12 @@ a {
     text-decoration: none;
 }
 
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
 #main {
     width: min(1400px, 100%);
     display: grid;
@@ -63,6 +69,8 @@ a {
     grid-column: 2 / 3;
 
     background-color: var(--content-color);
+
+    box-shadow: inset -2px 8px 16px -12px rgba(0,0,0,0.76);
 }
 
 .logo,
@@ -96,9 +104,6 @@ a {
 }
 
 .sidebar > ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
     display: grid;
     grid-template-rows: repeat(auto-fill, 50px);
 }
@@ -145,6 +150,7 @@ li {
 .content {
     display: grid;
     grid-template-columns: 7fr 3fr;
+    padding: 30px;
 }
 
 .content
@@ -163,6 +169,7 @@ li {
 .trending {
     display: grid;
     grid-template-rows: 50px 1fr;
+    padding-top: 15px;
 }
 
 .projects
@@ -250,6 +257,12 @@ li {
     overflow: hidden;
 }
 
+.card,
+.ann-card,
+.trending-card {
+    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.25);
+}
+
 .accent-column {
     grid-row: 1 / 4;
     background-color: #ffae50;
@@ -268,4 +281,52 @@ li {
     grid-template-rows: 30px;
     justify-content: end;
     gap: 20px;
+}
+
+.ann-card {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    background-color: var(--header-color);
+    border-radius: 12px;
+}
+
+.ann-2nd {
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+}
+
+.trending-list {
+    background-color: var(--header-color);
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+}
+
+.trending-card {
+    display: grid;
+    grid-template-rows: 1fr;
+}
+
+.trending-project {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.trending-project
+.icon {
+    grid-row: 1 / 3;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+    overflow: hidden;
+}
+
+.trending-project
+.user,
+.trending-project
+.project-title {
+    grid-column: 2 / 3;
+    font-size: 16px;
+    font-weight: 400;
 }
