--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ ul {
 
     display: grid;
     grid-template-rows: 1fr 2fr;
+
+    padding: 15px 20px;
 }
 
 .content {
@@ -122,7 +124,7 @@ li {
 .top-header
 .search-bar {
     display: grid;
-    grid-template-columns: 2fr 8fr;
+    grid-template-columns: 1.5fr 8fr;
 }
 
 .top-header
@@ -138,7 +140,27 @@ li {
 .bottom-header
 .user-header {
     display: grid;
-    grid-template-columns: 3fr 7fr;
+    grid-template-columns: 2fr 7fr;
+}
+
+.user-header
+.user-icon {
+    display: grid;
+    align-items: center;
+}
+
+.user-greet
+.greet {
+    display: grid;
+    align-items: end;
+}
+
+.user-greet
+.user {
+    display: grid;
+    align-items: center;
+    font-size: var(--title-size);
+    font-weight: bold;
 }
 
 .bottom-header
@@ -147,10 +169,13 @@ li {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
+.header-buttons button {
+    font-weight: bold;
+}
+
 .content {
     display: grid;
     grid-template-columns: 7fr 3fr;
-    padding: 30px;
 }
 
 .content
@@ -181,13 +206,29 @@ li {
     padding: 15px 30px;
 }
 
+.search-button {
+    display: grid;
+    justify-content: end;
+    padding-right: 20px;
+}
+
 .search-button button {
     background-color: var(--header-color);
     border: none;
 }
 
+svg {
+    height: 30px;
+    width: 30px;
+}
+
 .search-button button:hover {
     background-color: var(--header-color);
+}
+
+.search-input {
+    display: grid;
+    align-items: center;
 }
 
 .search-input input {
@@ -195,6 +236,26 @@ li {
     border-radius: 12px;
     border: none;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 100%;
+    height: 30px;
+}
+
+.notification {
+    display: grid;
+    justify-content: end;
+    align-items: center;
+}
+
+.user-name {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+}
+
+.user-icon {
+    display: grid;
+    justify-content: center;
 }
 
 .top-header img {
