--- a/style.css
+++ b/style.css
@@ -88,6 +88,9 @@ ul {
 .logo {
     display: grid;
     grid-template-columns: 1fr 3fr;
+    font-size: var(--header-size);
+    font-weight: 600;
+    align-self: flex-start;
 }
 
 .side-button {
@@ -102,12 +105,6 @@ ul {
 .icon svg {
     height: 24px;
     width: 24px;
-}
-
-.logo {
-    font-size: var(--header-size);
-    font-weight: 600;
-    align-self: flex-start;
 }
 
 .sidebar > ul {
@@ -163,7 +160,7 @@ li {
 .user-greet
 .user {
     display: grid;
-    align-items: center;
+    align-items: flex-start;
     font-size: var(--title-size);
     font-weight: bold;
 }
@@ -253,7 +250,6 @@ svg {
 .user-name {
     display: grid;
     align-items: center;
-    justify-content: center;
     font-weight: bold;
 }
 
@@ -280,7 +276,7 @@ svg {
 
 .user-greet {
     display: grid;
-    grid-template-rows: 1fr 2fr;
+    grid-template-rows: 1fr 1fr;
 }
 
 .button-new,
@@ -423,6 +419,7 @@ svg {
 .trending-project
 .icon {
     grid-row: 1 / 3;
+    align-self: center;
 }
 .icon
 img {
@@ -438,6 +435,17 @@ img {
 .trending-project
 .project-title {
     grid-column: 2 / 3;
-    font-size: 16px;
+}
+
+.trending-project
+.user {
     font-weight: 400;
+    font-size: 16px;
+    align-self: flex-end;
+}
+
+.project-title {
+    color: var(--plain-text);
+    font-size: 14px;
+    font-weight: 300;
 }
