--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
     height: 100vh;
     width: 100vw;
     justify-content: center;
+    background: linear-gradient(0deg, rgba(48, 94, 168, 1) 0%, rgba(25, 89, 193, 1) 35%, rgba(86, 140, 227, 1) 100);
 }
 
 a {
@@ -203,7 +204,7 @@ li {
 .cards {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-template-rows: repeat(auto-fill, 200px);
+    grid-auto-rows: 1fr;
     gap: 30px;
 }
 
