--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     height: 100vh;
     width: 100vw;
     justify-content: center;
-    background: linear-gradient(0deg, rgba(48, 94, 168, 1) 0%, rgba(25, 89, 193, 1) 35%, rgba(86, 140, 227, 1) 100);
+    background: linear-gradient(0deg, rgba(48,94,168,1) 0%, rgba(25,89,193,1) 35%, rgba(86,140,227,1) 100%);
 }
 
 a {
